[package]
name = "gamenetworkingsockets-rs"
version = "0.8.0"
authors = ["restitux"]
description = "Provides rust friendly bindings to the GameNetworkingSockets library"
license = "MIT / Apache-2.0"
repository = "https://github.com/restitux/steamworks-rs"
#documentation = "https://docs.rs/steamworks"
keywords = ["steam", "gamedev"]
categories = ["games"]
edition = "2018"

[package.metadata.docs.rs]
features = [ "docs-only" ]

[features]
default = []
raw-bindings = []
# Skip looking for the steamworks sdk for docs builds
docs-only = ["gamenetworkingsockets-sys/docs-only"]

[workspace]
members = [
    "./gamenetworkingsockets-sys",
#    "examples/chat-example"
]

[dependencies]
gamenetworkingsockets-sys = {path = "./gamenetworkingsockets-sys", version = "0.8.0"}
thiserror = "1.0.24"
bitflags = "1.2.1"
lazy_static = "1.4.0"
serde = { version = "1.0.123", features = ["derive"], optional = true }

[dev-dependencies]
serial_test = "0.5.1"
serial_test_derive = "0.5.1"
