[package]
name = "gamenetworkingsockets-sys"
version = "0.8.0"
authors = ["restitux"]
build = "build.rs"
description = "Provides raw bindings to the GameNetworkingSockets library"
license = "MIT / Apache-2.0"
repository = "https://github.com/restitux/gamenetworkingsockets-rs"
documentation = "https://docs.rs/gamenetworkingsockets-sys"
edition = "2018"

[package.metadata.docs.rs]
features = [ "docs-only" ]


[features]
default = []
# Skip looking for the steamworks sdk for docs builds
docs-only = []


[dependencies]

[build-dependencies]
cmake = "0.1"
pkg-config = "0.3"
bindgen = "0.59"
